examples/test/testpolicy8183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8183
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key4: value29
      key36: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value13
          key46: value34
      podSelector:
        matchLabels:
          key5: value17
          key47: value28
          key40: value7
